* file.c: [DOC] Clarify how File.file? handles symbolic links. Also   cleaned up the rdoc style for this method, more to follow.   Originally reported by Michael Renner [Bug #10067]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@46978 b2dd03c8-39d4-4d8f-98ff-823fe69b080e